--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
-    "compilerOptions": {
-    "target": "es2022",
+  "compilerOptions": {
+    "target": "ES2024",
     "strict": true,
     "outDir": "./dist",
     "moduleDetection": "force",
@@ -8,6 +8,8 @@
     "resolveJsonModule": true,
     "allowJs": true,
     "esModuleInterop": true,
-    "isolatedModules": true
-    }
+    "isolatedModules": true,
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true
+  }
 }
