cambio en schema

--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-CONNECT_DB=postgresql://postgres:prueba#@localhost:5434/dbPrueba2
+CONNECT_DB="postgres://postgres:prueba@localhost:5434/dbPrueba2"
 PORT=3000
 
